Fix image alignment

--- a/css/main.css
+++ b/css/main.css
@@ -84,11 +84,10 @@ h6 {
 	display: table;
 	padding-top: 8rem;
 	padding-bottom: 8rem;
-	background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.2) 100%), url("../img/bg-m.jpg");
-	background-position: center center;
+	background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.2) 100%), url("../img/bg-s.jpg");
 	background-repeat: no-repeat;
-	background-size: cover;
 	width: 100%;
+	height: 60vh;
 	background-attachment: fixed;
 }
 
@@ -114,10 +113,22 @@ h6 {
 	margin-top: 50px;
 }
 
-@media (min-width: 992px) {
+
+@media (min-width: 6005px) {
+	.masthead {
+		background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.6) 100%), url("../img/bg-s.jpg");
+	}
+}
+
+@media (min-width: 768px) {
+	.masthead {
+		background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.6) 100%), url("../img/bg-m.jpg");
+	}
+}
+
+@media (min-width: 991px) {
   .masthead {
-    height: 80vh;
-	background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.2) 100%), url("../img/bg.jpg");
+	background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.2) 100%), url("../img/bg-l.jpg");
 	background-attachment: fixed;
   }
   .masthead h1 {
@@ -125,16 +136,17 @@ h6 {
   }
 }
 
-@media (min-width: 1280px) {
-  .masthead {
-	background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.2) 100%), url("../img/bg-l.jpg");
-  }
+@media (min-width: 1199px) {
+	.masthead {
+		background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.6) 100%), url("../img/bg-xl.jpg");
+		background-position: center left;
+	}
 }
 
-@media (min-width: 1800px) {
-  .masthead {
-	background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.6) 100%), url("../img/bg-xl.jpg");
-  }
+@media (min-width: 2400px) {
+	.masthead {
+		background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.6) 100%), url("../img/bg-xxl.jpg");
+	}
 }
 
 .member-masthead {
